<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AboutFragment">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dip"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dip"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dip"
            android:text="@string/about_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="25dip"
            android:layout_marginRight="8dp"
            android:text="@string/abZ"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:layout_centerHorizontal="false"
            android:layout_marginStart="25dip"
            android:layout_marginTop="70dip"
            android:text="@string/dev_text"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="134dp"
            android:layout_height="127dp"
            android:layout_below="@id/textView5"
            android:layout_marginTop="16dip"
            app:srcCompat="@drawable/photo_2022_05_14_12_36_08__2_" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView5"
            android:layout_alignEnd="@id/textView3"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/abDev"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView12"
            android:layout_alignLeft="@id/textView12"
            android:layout_marginTop="15dp"
            android:autoLink="web"
            android:text="@string/link"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView3"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="166dip"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/copyright"
            android:textSize="10sp" />

    </RelativeLayout>
</ScrollView>